# push_swap

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  checker  leaks_script.sh  output.txt  push_swap  test.sh
includes/: push_swap.h
libft/: Makefile  ft_atoi.c  ft_bzero.c  ft_d_bblsort.c  ft_d_minind.c  ft_d_sqrt.c  ft_errmsg.c  ft_gnl.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_itoa.c  ft_lf_pow.c  ft_ll_fact.c  ft_lstadd.c  ft_lstdel.c  ft_lstdelone.c  ft_lstiter.c  ft_lstmap.c  ft_lstnew.c  ft_memalloc.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memdel.c  ft_memmove.c  ft_memset.c  ft_putchar.c  ft_putchar_fd.c  ft_putendl.c  ft_putendl_fd.c  ft_putnbr.c  ft_putnbr_fd.c  ft_putstr.c  ft_putstr_fd.c  ft_strcat.c  ft_strchr.c  (+30 more)
libft/ft_printf/includes/: ft_printf.h
libft/ft_printf/src/: ft_printf.c
libft/ft_printf/src/handle/: handle.c  number.c  pointer.c  string.c
libft/ft_printf/src/handle/integer/: integer.c
libft/ft_printf/src/helpers/: buffer.c
libft/ft_printf/src/parse/: parse.c  precision.c  width.c
src/: checker.c  push_swap.c
src/helpers/: finders.c  finders_for_moving_to_a.c  helpers1.c  helpers2.c  moving_nbrs_to_a.c  moving_nbrs_to_a_2.c  moving_nbrs_to_b.c  mr_cleaner.c  shared_ps_checker.c
src/list/: lst_create.c  lst_is_sorted.c  lst_new_node.c  lst_pop.c  lst_push.c  lst_push_head.c  lst_shift.c  lst_splice.c
src/movers/: moving_nbrs_to_a.c  moving_nbrs_to_a_2.c  moving_nbrs_to_b.c  mr_cleaner.c  shared_ps_checker.c  three_nbrs_in_stack_a.c
src/operations/: p.c  p_s_op_handler.c  r.c  rr.c  s.c
